[gd_scene load_steps=2 format=3 uid="uid://b5hufqs7sbm01"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_ysfbh"]

[node name="Main" type="Node2D"]
script = ExtResource("1_ysfbh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -50.5
offset_right = 48.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="LobbyButton" type="Button" parent="CanvasLayer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Lobby"

[node name="MenuButton" type="Button" parent="CanvasLayer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Main Menu
"

[node name="QuitButton" type="Button" parent="CanvasLayer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"
